# Testing

./: .gitignore  CMakeLists.txt  MinGWBuild.bat  README.md  Testing.sublime-project
src/: CMakeLists.txt  Factorial.cpp  MessageHandler.cpp  MessageHandler.h  main.cpp  res.qrc
src/Interpreter/: CMakeLists.txt  Interpreter.cpp  Interpreter.h  MemManager.cpp  MemManager.h
src/UI/: CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  MainWindow.cpp  MainWindow.h  MemoryDisplay.cpp  MemoryDisplay.h  StatusBar.cpp  StatusBar.h  TitleBarWidget.cpp  TitleBarWidget.h  WindowButtons.cpp  WindowButtons.h
src/res/: stylesheet.qss.old
src/res/style/: stylesheet.qss
src/style/: stylesheet.scss
tests/: CMakeLists.txt  testmain.cpp
